# bazel_sysroot_llvm_arm64

./: .gitignore  Makefile  README.md  SYSROOT_STRUCTURE.md  default.nix  flake.nix
sysroot/: BUILD.bazel  BUILD.sysroot.bazel  toolchain.BUILD
sysroot/include/: asm  asm-generic  bzlib.h  config  drm  linux  misc  mtd  rdma  regulator  sound  video  xen
sysroot/include/blkid/: blkid.h
sysroot/include/libfdisk/: libfdisk.h
sysroot/include/libmount/: libmount.h
sysroot/include/libsmartcols/: libsmartcols.h
sysroot/lib/: libasan.so.8.0.0  libatomic.so.1.2.0  libc++.so.1.0  libc++abi.so.1.0  libcurl.la  libcurl.so.4.8.0  libexpat.la  libexpat.so.1.10.2  libgcc_s.so.1  libhwasan.so.0  libitm.so.1  libjansson.so.4.14.0  libjpeg.so.62.4.0  liblsan.so.0.0.0  libpcre.la  libpcre.so.1.2.13  libpcre2-16.la  libpcre2-16.so.0.13.0  libpcre2-32.la  libpcre2-32.so.0.13.0  libpcre2-8.la  libpcre2-8.so.0.13.0  libpcre2-posix.la  libpcre2-posix.so.3.0.5  libpcreposix.la  libpcreposix.so.0.0.7  libpng16.la  libpng16.so.16  libpng16.so.16.46.0  libsqlite3.la  libsqlite3.so.0.8.6  libssp.so.0  libstdc++.so.6.0.33  libstdc++.so.6.0.33-gdb.py  libtsan.so.2.0.0  libturbojpeg.so.0.3.0
sysroot/lib/cmake/libxml2/: libxml2-config.cmake
sysroot/lib/gcc/x86_64-unknown-linux-gnu/14.2.1/plugin/: gtype.state
sysroot/lib/gcc/x86_64-unknown-linux-gnu/14.2.1/plugin/include/: auto-host.h  configargs.h  insn-codes.h  insn-constants.h  insn-flags.h  options.h  plugin-version.h  tm-preds.h  version.h
sysroot/lib/gcc/x86_64-unknown-linux-gnu/14.2.1/plugin/include/config/i386/: linux64.h
sysroot/lib/linux/: libclang_rt.asan-x86_64.a.syms  libclang_rt.memprof-x86_64.a.syms  libclang_rt.msan-x86_64.a.syms  libclang_rt.tsan-x86_64.a.syms
sysroot/lib/pkgconfig/: zlib.pc
sysroot/lib/systemd/system/: fstrim.service  lastlog2-import.service  uuidd.service
